--- a/app/views/apps/_sidebar.html.erb
+++ b/app/views/apps/_sidebar.html.erb
@@ -3,6 +3,7 @@
     <li class="list-group-item"><%= link_to 'Upload a Build', '#' %></li>
     <li class="list-group-item"><%= link_to 'Previous Builds', app_builds_path(@app) %></li>
     <li class="list-group-item"><%= link_to 'Team', '#' %>
+    <li class="list-group-item"><%= link_to 'Settings', edit_app_path(@app) %></li>
   </ul>
 </div>
 
