--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,7 +1,14 @@
 <div class="container">
+  <div class="row mbl">
+    <div class="col-lg-12">
+      <div class="pull-right">
+        <%= link_to 'New App', new_app_path, :class => "btn btn-success" %>
+      </div>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-lg-12">
-
       <div class="apps-panel panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">Apps</h3>
@@ -12,12 +19,12 @@
             <div class="row">
               <div class="col-lg-3">
                 <h4><%= link_to app.name, app_path(app) %></h4>
+                <hr>
               </div>
             </div>
           <% end %>
         </div>
       </div>
-
 
     </div>
   </div>
