Added build uploads, added previous builds listing

--- a/app/views/apps/_sidebar.html.erb
+++ b/app/views/apps/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <ul class="sidebar-menu list-group">
-    <li class="list-group-item"><%= link_to 'Upload a Build', '#' %></li>
+    <li class="list-group-item"><%= link_to 'Upload a Build', new_app_build_path(@app) %></li>
     <li class="list-group-item"><%= link_to 'Previous Builds', app_builds_path(@app) %></li>
     <li class="list-group-item"><%= link_to 'Team', '#' %>
     <li class="list-group-item"><%= link_to 'Settings', edit_app_path(@app) %></li>
