--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mbl">
     <div class="col-xs-12">
-      <h2><%= @app.name %></h2>
+      <h2><%= link_to @app.name, app_path %></h2>
     </div>
   </div>
 
@@ -13,10 +13,10 @@
     <div class="col-sm-10 col-md-9 col-lg-8">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">Latest Build</h3>
+          <h3 class="panel-title"><%= "Build ##{@app.latest_build.number}" if @app.latest_build.present? %></h3>
         </div>
         <div class="panel-body">
-          <%= render 'builds/notes' %>
+          <%= render 'builds/notes', build: @app.latest_build %>
         </div>
       </div>
     </div>
