--- a/app/views/builds/_notes.html.erb
+++ b/app/views/builds/_notes.html.erb
@@ -1,1 +1,6 @@
-<h4>Release Notes</h4>
+<% if build.present? %>
+  <h4>Release Notes</h4>
+  <%= build.notes %>
+<% else %>
+  <h5><%= t('app.builds.none') %></h5>
+<% end %>
