--- a/app/views/testpilot/show.html.erb
+++ b/app/views/testpilot/show.html.erb
@@ -1,3 +1,5 @@
+<%= content_tag :div, '', id: 'apps' %>
+
 <%= javascript_tag do  %>
   window.router = new Testpilot.Routers.AppsRouter();
   Backbone.history.start();
