--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,10 @@
  *
  *= require_self
  *= require bootstrap
+ *= require font-awesome
  *= require compiler
  *= require_tree .
  */
+ body {
+  padding-top: 50px;
+ }
