Changing views over to Marionette, WIP

--- a/app/views/testpilot/show.html.erb
+++ b/app/views/testpilot/show.html.erb
@@ -1,1 +1,7 @@
 <%= content_tag :div, '', id: 'apps' %>
+
+<script type="text/javascript" charset="utf-8">
+  $(function () {
+    Testpilot.start();
+  });
+</script>
