Added view event to trigger APK download

--- a/app/assets/javascripts/backbone/templates/builds/list_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/builds/list_item.jst.ejs
@@ -1,4 +1,4 @@
 <td><%= number %></td>
 <td><%= created_at %></td>
 <td><a href="#/<%= app_id %>/builds/<%= id %>">Show</td>
-<td><button class="btn btn-success" onclick="<%= downloadBuild() %>">Install</button></td>
+<td><button class="btn btn-success download-apk">Install</button></td>
