Changed root element of JS app to #testpilot

--- a/app/views/testpilot/show.html.erb
+++ b/app/views/testpilot/show.html.erb
@@ -1,5 +1,4 @@
-<%= content_tag :div, '', id: 'apps' %>
-
+<%= content_tag :div, '', id: 'testpilot' %>
 <script type="text/javascript" charset="utf-8">
   $(function () {
     Testpilot.start();
