Removed bootstrap tables, used panel and rows for display of builds

--- a/app/assets/javascripts/backbone/templates/builds/list_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/builds/list_item.jst.ejs
@@ -1,3 +1,11 @@
-<td><%= number %></td>
-<td><%= created_at %></td>
-<td><button class="btn btn-success download-apk">Install</button></td>
+<div class="row">
+  <div class="col-xs-1">
+    <h4>#<%= number %></h4>
+  </div>
+  <div class="col-xs-11">
+    <div class="pull-right">
+      <button class="btn btn-success download-apk">Install</button>
+    </div>
+  </div>
+</div>
+
