--- a/app/assets/javascripts/backbone/templates/builds/list.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/builds/list.jst.ejs
@@ -1,13 +1,11 @@
-<h1>Builds</h1>
+<div class="row mtl">
+  <div class="apps-panel panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">All Builds</h3>
+    </div>
 
-<table class="table" id="apps-table">
-  <thead>
-    <tr>
-      <th>Build Number</th>
-      <th>Created At</th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
+    <div id="builds-list" class="panel-body"></div>
+  </div>
+</div>
+
 
