Removed bootstrap table from app views, added panel and rows

--- a/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
@@ -1,13 +1,10 @@
-<h1>Apps</h1>
+<div class="row mtl">
+  <div class="apps-panel panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Apps</h3>
+    </div>
 
-<table class="table" id="apps-table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Created At</th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
+    <div id="apps-list" class="panel-body"></div>
+  </div>
+</div>
 
