--- a/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
@@ -1,4 +1,6 @@
-<td><%= name %></td>
-<td><%= created_at %></td>
-<td><a href="#/<%= id %>">Show</td>
-<td><a href="#/<%= id %>/builds">Builds</td>
+<div class="row">
+  <div class="col-xs-12">
+    <a href="#/<%= id %>/builds"><h4><%= name %></h4></a>
+  </div>
+</div>
+
