--- a/app/assets/javascripts/backbone/templates/builds/list_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/builds/list_item.jst.ejs
@@ -1,8 +1,15 @@
 <div class="row">
-  <div class="col-xs-1">
+  <div class="col-xs-5">
     <h4>#<%= number %></h4>
   </div>
-  <div class="col-xs-11">
+  <div class="col-xs-6">
+    <h5>
+    <time itemprop="createdAt" datetime="<%= created_at %>">
+      <%= moment(created_at).fromNow() %>
+    </time>
+    </h5>
+  </div>
+  <div class="col-xs-1">
     <div class="pull-right">
       <button class="btn btn-success download-apk">Install</button>
     </div>
