--- a/app/assets/javascripts/backbone/templates/builds/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/builds/show.jst.ejs
@@ -1,6 +1,9 @@
 <h1>Build #<%= number %></h1>
 <p>
-  Build created at <time itemprop="createdAt" datetime="<%= created_at %>"><%= created_at %></time>
+  Build created at
+  <time itemprop="createdAt" datetime="<%= created_at %>">
+    <%= moment(created_at).fromNow() %>
+  </time>
 </p>
 <h4>Release Notes:</h4>
 <p><%= release_notes %></p>
