--- a/app/views/layouts/partials/_navigation.html.erb
+++ b/app/views/layouts/partials/_navigation.html.erb
@@ -8,6 +8,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+        <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
