--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 </head>
 <body>
   <%= render "layouts/partials/navigation" %>
+  <%= render "layouts/partials/alerts" %>
   <div class="container">
     <%= yield %>
   </div>
