--- a/app/views/layouts/authentication.html.erb
+++ b/app/views/layouts/authentication.html.erb
@@ -1,1 +1,20 @@
-<%= yield %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Testpilot</title>
+
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+</head>
+<body class="authentication">
+  <div class="container">
+    <%= render "layouts/partials/alerts" %>
+    <%= yield %>
+  </div>
+
+</body>
+</html>
