Add styles and markup for authentication layout

--- a/app/views/layouts/authentication.html.erb
+++ b/app/views/layouts/authentication.html.erb
@@ -12,9 +12,10 @@
 </head>
 <body class="authentication">
   <div class="container">
-    <%= render "layouts/partials/alerts" %>
-    <%= yield %>
+    <div class="auth-container">
+      <%= render "layouts/partials/alerts" %>
+      <%= yield %>
+    </div>
   </div>
-
 </body>
 </html>
