--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,12 +1,11 @@
-<h2>Resend confirmation instructions</h2>
+<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: {method: :post, class: 'form-authentication', role: 'form'}) do |f| %>
+  <h2 class='form-authentication-heading'>
+    Resend confirmation instructions
+  </h2>
+  <%= f.email_field :email, autofocus: true, placeholder: 'Email address', required: true, class: 'form-control'%>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.submit "Resend confirmation instructions" %></div>
+  <%= f.submit 'Resend confirmation instructions', class: 'btn btn-lg btn-primary btn-block' %>
+  <%= render "devise/shared/links" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
