Add styles for change password form

--- a/app/assets/stylesheets/modules/change_password_form.css.scss
+++ b/app/assets/stylesheets/modules/change_password_form.css.scss
@@ -1,12 +1,12 @@
-.form-sign-in {
+.form-change-password {
 
-  input[type=email] {
+  input#user_password {
     margin-bottom: -1px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
   }
 
-  input[type=password] {
+  input#user_password_confirmation {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
