--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,19 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), method: :put, html: {class: 'form-authentication form-change-password', role: 'form'}) do |f| %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %></div>
+  <h2 class='form-authentication-heading'>
+    Change your password
+  </h2>
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <%= devise_error_messages! %>
 
-  <div><%= f.submit "Change my password" %></div>
+  <%= f.password_field :password, autofocus: true, placeholder: 'New password', autocomplete: 'off', required: true, class: 'form-control'%>
+
+  <%= f.password_field :password_confirmation, autofocus: true, placeholder: 'Confirm new password', autocomplete: 'off', required: true, class: 'form-control'%>
+
+  <%= f.submit 'Change my password', class: 'btn btn-lg btn-primary btn-block' %>
+
+  <%= render "devise/shared/links" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
