--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -2,6 +2,7 @@
   <h2 class='form-authentication-heading'>
     Resend confirmation instructions
   </h2>
+  <%= devise_error_messages! %>
   <%= f.email_field :email, autofocus: true, placeholder: 'Email address', required: true, class: 'form-control'%>
 
   <%= f.submit 'Resend confirmation instructions', class: 'btn btn-lg btn-primary btn-block' %>
