--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -2,6 +2,9 @@
   <h2 class='form-authentication-heading'>
     Resend unlock instructions
   </h2>
+
+  <%= devise_error_messages! %>
+
   <%= f.email_field :email, autofocus: true, placeholder: 'Email address', required: true, class: 'form-control'%>
 
   <%= f.submit 'Resend unlock instructions', class: 'btn btn-lg btn-primary btn-block' %>
