--- a/app/views/layouts/partials/_navigation.html.erb
+++ b/app/views/layouts/partials/_navigation.html.erb
@@ -13,6 +13,8 @@
 
           <ul class="dropdown-menu">
             <li><%= link_to 'Invite someone', new_user_invitation_path %></li>
+            <li class="divider"></li>
+            <li><%= link_to 'Update your account', edit_user_registration_path %></li>
             <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
