--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,33 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= form_for(resource, as: resource_name, url: user_registration_path, html: { method: :put, class: 'form-authentication' }) do |f| %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <h2 class="form-authentication-heading">Update your account</h2>
+
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <div class="form-group">
+    <%= f.label :email, 'Email address' %>
+    <%= f.email_field :email, autofocus: true, placeholder: 'Email address', required: true, class: 'form-control'%>
+  </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div class="alert alert-info">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.password_field :password, autocomplete: false, placeholder: 'New password', class: 'form-control'%>
+    <p class="help-block">(leave blank if you don't want to change it)</p>
+  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.password_field :password_confirmation, autocomplete: false, placeholder: 'Confirm new password confirmation', class: 'form-control'%>
+    <p class="help-block">(leave blank if you don't want to change it)</p>
+  </div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.password_field :current_password, autocomplete: false, placeholder: 'Current password', class: 'form-control'%>
+    <p class="help-block">(we need your current password to confirm your changes)</p>
+  </div>
 
-  <div><%= f.submit "Update" %></div>
+  <div><%= f.submit "Update Account", class: 'btn btn-lg btn-primary btn-block' %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
