--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -11,7 +11,7 @@
 
   <%= f.password_field :password, autofocus: true, placeholder: 'Password', autocomplete: 'off', required: true, class: 'form-control'%>
 
-  <%= f.password_field :password_confirmation, autofocus: true, placeholder: 'Confirm password', autocomplete: 'off', required: true, class: 'form-control'%>
+  <%= f.password_field :password_confirmation, placeholder: 'Confirm password', autocomplete: 'off', required: true, class: 'form-control'%>
 
   <%= f.submit t("devise.invitations.edit.submit_button"), class: 'btn btn-lg btn-primary btn-block' %>
 
