Adds position: fixed; to body element to force 100% width and height on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require compiler
  *= require_tree .
  */
+
  body {
+  position: fixed;
+  height: 100%;
+  width: 100%;
   padding-top: 50px;
  }
