--- a/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
@@ -1,5 +1,9 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-1">
+      <img src="<%= icon.thumb %>" alt="<%= name %>'s Icon" />
+  </div>
+
+  <div class="col-xs-11">
     <a href="#/<%= id %>/builds"><h4><%= name %></h4></a>
   </div>
 </div>
