--- a/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <a href="#/<%= id %>/builds"><h4><%= name %></h4></a>
+    <a href="#/<%= id %>"><h4><%= name %></h4></a>
   </div>
 </div>
 
