Show app data in a jumbotron

--- a/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
@@ -1,6 +1,8 @@
-<h1><%= name %></h1>
-<p>
-  App created at <time itemprop="createdAt" datetime="<%= created_at %>"><%= created_at %></time>
-</p>
+<div class="jumbotron mtxl">
+  <h1><%= name %></h1>
+  <p>
+    App created at <time itemprop="createdAt" datetime="<%= created_at %>"><%= created_at %></time>
+  </p>
+</div>
 
 <ul></ul>
