--- a/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
@@ -8,6 +8,12 @@
         <p>
           App created at <time itemprop="createdAt" datetime="<%= created_at %>"><%= created_at %></time>
         </p>
+        <p>
+          <a class="btn btn-primary btn-lg" role="button" href="#/apps/<%= id %>/assignments">
+            <i class="fa fa-users"></i>&nbsp;
+            Manage acccess
+          </a>
+        </p>
     </div>
   </div>
 </div>
