--- a/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
@@ -11,7 +11,7 @@
         <p>
           <a class="btn btn-primary btn-lg" role="button" href="#/apps/<%= id %>/assignments">
             <i class="fa fa-users"></i>&nbsp;
-            Manage acccess
+            Manage access
           </a>
         </p>
     </div>
