Update assignments list template to render markup for Bootstrap modal

--- a/app/assets/javascripts/backbone/templates/assignments/list.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/assignments/list.jst.ejs
@@ -1,10 +1,11 @@
-<div class="row mtl">
-  <div class="apps-panel panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Manage Access</h3>
-    </div>
+<div class="modal-content">
+  <div class="modal-header">
+     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h2 class="modal-title">Manage Access</h2>
+  </div>
 
-    <div id="assignments-list" class="panel-body"></div>
+  <div class="modal-body">
+    <div id="assignments-list"></div>
   </div>
 </div>
 
