--- a/app/views/testpilot/show.html.erb
+++ b/app/views/testpilot/show.html.erb
@@ -1,3 +1,4 @@
+<%= content_tag :div, '', id: 'modal', class: 'modal', tabindex: -1, role: "dialog", :"aria-labelledby" => "Modal", :"aria-hidden" => true %>
 <%= content_tag :div, '', id: 'testpilot' %>
 <script type="text/javascript" charset="utf-8">
   $(function () {
