Replace link with button

--- a/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
@@ -9,10 +9,10 @@
           App created at <time itemprop="createdAt" datetime="<%= created_at %>"><%= created_at %></time>
         </p>
         <p>
-          <a class="btn btn-primary btn-lg" role="button" href="#/apps/<%= id %>/assignments">
+          <button class="btn btn-primary btn-lg js-manage-assignments" type="button">
             <i class="fa fa-users"></i>&nbsp;
             Manage access
-          </a>
+          </button>
         </p>
     </div>
   </div>
