--- a/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
@@ -1,7 +1,12 @@
 <div class="row mtl">
   <div class="apps-panel panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Apps</h3>
+    <div class="panel-heading clearfix">
+      <h3 class="panel-title pull-left">Apps</h3>
+      <div class="pull-right">
+        <button class="btn btn-xs btn-default js-new-app">
+          <i class="fa fa-plus"></i>
+        </button>
+      </div>
     </div>
 
     <div id="apps-list" class="panel-body"></div>
