Added basic config for routing to new app view

--- a/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
@@ -3,9 +3,11 @@
     <div class="panel-heading clearfix">
       <h3 class="panel-title pull-left">Apps</h3>
       <div class="pull-right">
-        <button class="btn btn-xs btn-default js-new-app">
-          <i class="fa fa-plus"></i>
-        </button>
+        <a href="#/apps/new">
+          <button class="btn btn-xs btn-default js-new-app">
+            <i class="fa fa-plus"></i>
+          </button>
+        </a>
       </div>
     </div>
 
