Testpilot, not TestPilot

--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -52,7 +52,7 @@
         <tr>
           <td align="center">
             <center>
-              <p style="text-align:center;"><a href="https://fly.testpilotapp.com">TestPilot</a> | <a href="https://testpilotapp.com/terms-of-use">Terms</a> | <a href="https://testpilotapp.com/privacy">Privacy</a></p>
+              <p style="text-align:center;"><a href="https://fly.testpilotapp.com">Testpilot</a> | <a href="https://testpilotapp.com/terms-of-use">Terms</a> | <a href="https://testpilotapp.com/privacy">Privacy</a></p>
             </center>
           </td>
           <td class="expander"></td>
