--- a/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/app/views/devise/mailer/invitation_instructions.html.erb
@@ -8,7 +8,7 @@
             <h1>Hello <%= @resource.email %>,</h1>
             <p class="lead">
               <%= @resource.invited_by ? @resource.invited_by.email : "Somebody" %> has invited
-              you to have access to an application on TestPilot.
+              you to have access to an application on Testpilot.
             </p>
             <p>
               This will allow you to view and install the application, and place feedback.
@@ -60,7 +60,7 @@
         <tr>
           <td align="center">
             <center>
-              <p style="text-align:center;"><a href="https://fly.testpilotapp.com">TestPilot</a> | <a href="https://testpilotapp.com/terms-of-use">Terms</a> | <a href="https://testpilotapp.com/privacy">Privacy</a></p>
+              <p style="text-align:center;"><a href="https://fly.testpilotapp.com">Testpilot</a> | <a href="https://testpilotapp.com/terms-of-use">Terms</a> | <a href="https://testpilotapp.com/privacy">Privacy</a></p>
             </center>
           </td>
           <td class="expander"></td>
