--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -9,7 +9,10 @@
 
   <%= devise_error_messages! %>
 
-  <%= f.password_field :password, autofocus: true, placeholder: 'Password', autocomplete: 'off', required: true, class: 'form-control'%>
+  <%= f.text_field :full_name, autofocus: true, placeholder: 'Full Name', required: true, class: 'form-control' %>
+  <%= form_help 'Your full name, e.g. John Doe' %>
+
+  <%= f.password_field :password, placeholder: 'Password', autocomplete: 'off', required: true, class: 'form-control'%>
 
   <%= f.password_field :password_confirmation, placeholder: 'Confirm password', autocomplete: 'off', required: true, class: 'form-control'%>
 
