Update devise mailer views to use @resource.full_name instead of email

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -5,7 +5,7 @@
       <table class="twelve columns">
         <tr>
           <td>
-            <h1>Welcome <%= @email %>,</h1>
+            <h1>Welcome <%= @resource.full_name %>,</h1>
             <p class="lead">
               It's great to have you onboard with Testpilot! You can log in by clicking
               on the link below to confirm your account:
