--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -5,7 +5,7 @@
       <table class="twelve columns">
         <tr>
           <td>
-            <h1>Hello <%= @resource.email %>!</h1>
+            <h1>Hello <%= @resource.full_name %>!</h1>
             <p class="lead">
               Your account has been locked due to an excessive number of unsuccessful sign in attempts. Please click the link below to unlock your account:
             </p>
