--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -5,7 +5,7 @@
       <table class="twelve columns">
         <tr>
           <td>
-            <h1>Hello <%= @resource.email %>!</h1>
+            <h1>Hello <%= @resource.full_name %>!</h1>
             <p class="lead">
               Someone has requested a link to change your password. You can do this through the link below.
             </p>
