Make manage access button on app/show template smaller to fit onto mobile res

--- a/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show.jst.ejs
@@ -6,7 +6,7 @@
     <div class="media-body">
         <h1 class="media-heading"><%= name %></h1>
         <p>
-          <button class="btn btn-primary btn-lg js-manage-assignments" type="button">
+          <button class="btn btn-primary js-manage-assignments" type="button">
             <i class="fa fa-users"></i>&nbsp;
             Manage access
           </button>
