Don't prepend http to the email logo URL

--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -791,7 +791,7 @@ body.outlook p {
                         <table class="twelve columns">
                           <tr>
                             <td class="twelve sub-columns last">
-                              <%= image_tag "http://#{ActionMailer::Base.default_url_options[:host]}/images/logos/email.png" %>
+                              <%= image_tag "#{ActionMailer::Base.default_url_options[:host]}/images/logos/email.png" %>
                             </td>
 
                             <td class="expander"></td>
