--- a/app/views/layouts/partials/_navigation.html.erb
+++ b/app/views/layouts/partials/_navigation.html.erb
@@ -8,6 +8,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'Get Testpilot for Android', '/downloads/testpilot.apk' %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
 
