--- a/app/assets/stylesheets/compiler.css.scss
+++ b/app/assets/stylesheets/compiler.css.scss
@@ -1,6 +1,6 @@
-// Base
 @import 'base/spaces';
 @import 'modules/panel';
+@import 'modules/navbar';
 @import 'modules/sign_in_form';
 @import 'modules/change_password_form';
 
