--- a/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
@@ -1,10 +1,12 @@
 <div class="row">
-  <div class="col-xs-1">
-      <img src="<%= icon.thumb %>" alt="<%= name %>'s Icon" />
-  </div>
-
-  <div class="col-xs-11">
-    <a href="#/<%= id %>"><h4><%= name %></h4></a>
+  <div class="col-xs-12">
+    <div class="media">
+      <a class="pull-left" href="#/<%= id%>">
+        <img class="media-object" src="<%= icon.thumb %>" alt="<%= name %>'s Icon" />
+      </a>
+      <div class="media-body">
+        <a href="#/<%= id %>"><h4><%= name %></h4></a>
+      </div>
   </div>
 </div>
 
