--- a/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
@@ -8,3 +8,11 @@
   </div>
 </div>
 
+<div class="row mtl">
+  <div class="col-md-4 col-md-offset-4">
+    <a href="/downloads/testpilot.apk">
+      <button type="button" class="btn btn-success btn-lg btn-block">Get Testpilot for Android</button>
+    </a>
+  </div>
+</div>
+
