--- a/app/assets/javascripts/backbone/templates/assignments/list_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/assignments/list_item.jst.ejs
@@ -1,6 +1,6 @@
 <div class="row mbm">
   <div class="col-xs-8">
-    <%= user.email %>
+    <%= user.full_name %>
   </div>
   <div class="col-xs-4">
     <button class="btn btn-xs btn-danger pull-right js-remove-assignment" data-confirm="Are you sure you would like to revoke <%= user.email %>'s access to this application?">
