--- a/app/assets/stylesheets/compiler.css.scss
+++ b/app/assets/stylesheets/compiler.css.scss
@@ -3,6 +3,7 @@
 @import 'modules/navbar';
 @import 'modules/sign_in_form';
 @import 'modules/change_password_form';
+@import 'modules/assignment_row';
 
 /* Override z-index of modal-content to
    ensure that it displays over the top of
