Template and style updates, added template for app form

--- a/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list.jst.ejs
@@ -1,5 +1,5 @@
 <div class="row mtl">
-  <div class="apps-panel panel panel-default">
+  <div class="apps-panel panel panel-list panel-default">
     <div class="panel-heading clearfix">
       <h3 class="panel-title pull-left">Apps</h3>
       <div class="pull-right">
