Renamed notification/notification view to alert

--- a/app/views/testpilot/show.html.erb
+++ b/app/views/testpilot/show.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, '', id: 'modal', class: 'modal', tabindex: -1, role: "dialog", :"aria-labelledby" => "Modal", :"aria-hidden" => true %>
-<%= content_tag :div, '', id: 'notification' %>
+<%= content_tag :div, '', id: 'header-alert' %>
 <%= content_tag :div, '', id: 'testpilot' %>
 
 <script type="text/javascript" charset="utf-8">
