Remove authentication form headings

--- a/app/views/layouts/authentication.html.erb
+++ b/app/views/layouts/authentication.html.erb
@@ -13,8 +13,9 @@
 <body class="authentication">
   <div class="container">
     <div class="auth-container">
-      <h1>
-        <p style="text-align:center;"><%= icon :rocket %></p>
+      <h1 class='form-authentication-heading'>
+        <%= icon :rocket %><br />
+        TestPilot
       </h1>
       <%= render "layouts/partials/alerts" %>
       <%= yield %>
