--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
+    <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Bangers" %>
     <%= csrf_meta_tags %>
 </head>
 <body>
