--- a/app/views/layouts/authentication.html.erb
+++ b/app/views/layouts/authentication.html.erb
@@ -8,6 +8,8 @@
 
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Bangers" %>
     <%= csrf_meta_tags %>
 </head>
 <body class="authentication">
