Update render partial references

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
 
     <title>Testpilot</title>
 
-    <%= render "layouts/partials/device_tags" %>
-    <%= render "layouts/partials/favicons" %>
+    <%= render "device_tags" %>
+    <%= render "favicons" %>
 
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
