--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,15 @@
     <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render "layouts/partials/navigation" %>
-  <div class="container">
-    <%= render "layouts/partials/alerts" %>
-    <%= yield %>
+  <div class="container-fluid">
+    <div class="row">
+      <%= render "sidebar" %>
+      <div class="col-sm-8 col-m-9 col-sm-offset-4 col-md-offset-3" id="main">
+        <%= render "alerts" %>
+        <%= yield %>
+      </div>
+    </div>
+  </div>
   </div>
 
 </body>
