Render link media object, not div

--- a/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/list_item.jst.ejs
@@ -1,9 +1,9 @@
-<div class="media">
-  <a class="pull-left" href="#/<%= id %>">
+<a href="#/<%= id %>" class="media">
+  <div class="pull-left">
     <img class="media-object" src="<%= icon.thumb %>" alt="<%= name %>'s Icon" />
-  </a>
+  </div>
   <div class="media-body">
     <h4 class="media-heading"><%= name %>
   </div>
-</div>
+</a>
 
