--- a/app/views/layouts/partials/_navigation.html.erb
+++ b/app/views/layouts/partials/_navigation.html.erb
@@ -1,22 +1,9 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header pull-left">
-      <a class="navbar-brand" href="#">
-        <%= icon :rocket %>
-        Testpilot
-      </a>
-    </div>
-    <div class="navbar-header pull-right">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
+<nav class="main">
+  <span class="brand logo">aldrin</span>
 
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Update your account', edit_user_registration_path %></li>
-            <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
+  <span class="account">Signed in as <a><%= current_user.full_name %></a></span>
+</nav>
+
+
+<%#= link_to 'Update your account', edit_user_registration_path %>
+<%#= link_to 'Sign out', destroy_user_session_path, method: :delete %>
