Removing unrequired Rails views

--- a/app/views/testpilot/show.html.erb
+++ b/app/views/testpilot/show.html.erb
@@ -1,6 +1,7 @@
-<%= content_tag :div, '', id: 'modal', class: 'modal', tabindex: -1, role: "dialog", :"aria-labelledby" => "Modal", :"aria-hidden" => true %>
-<%= content_tag :div, '', id: 'header-alert' %>
-<%= content_tag :div, '', id: 'testpilot' %>
+<div id="modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="Modal" aria-hidden="true"></div>
+
+<div id="sidebar-region"></div>
+<div id="main-region"></div>
 
 <script type="text/javascript" charset="utf-8">
   $(function () {
