--- a/app/assets/stylesheets/sections/_aside.css.scss
+++ b/app/assets/stylesheets/sections/_aside.css.scss
@@ -7,6 +7,6 @@ aside.main {
     text-align: center;
     margin-top: 1em;
     padding-bottom: 1em;
-    border-bottom: 1px solid $border-colour-light
+    border-bottom: 1px solid $border-colour-light;
   }
 }
