Added animation to tabs.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,14 +44,10 @@
       </div>
     </aside>
 
-
-
-
-    <div class="container">
-      <%= render "layouts/partials/alerts" %>
+    <section class="main">
+      <%#= render "layouts/partials/alerts" %>
       <%= yield %>
-    </div>
-
+    </section>
   </div>
 
 </body>
