--- a/app/views/layouts/partials/_navigation.html.erb
+++ b/app/views/layouts/partials/_navigation.html.erb
@@ -1,9 +1,13 @@
 <nav class="main">
-  <span class="brand logo">aldrin</span>
+  <span class="brand logo"><%= link_to 'aldrin', root_path %></span>
 
-  <span class="account">Signed in as <a><%= current_user.full_name %></a></span>
+  <span class="account">
+    Signed in as <%= link_to current_user.full_name, edit_user_registration_path %>
+    |
+    <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+  </span>
 </nav>
 
 
-<%#= link_to 'Update your account', edit_user_registration_path %>
-<%#= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+
+
