--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,32 +20,37 @@
   <div class="wrapper">
     <aside class="main">
 
-      <a class="add">Add new app</a>
+      <%# Assuming this will be rendered in JS, NOT in the layout. %>
+      <% if current_user %>
+        <a class="add">Add new app</a>
 
-      <div class="app">
-        <img class="app-figure" src="https://lh5.ggpht.com/ly6G6lUNHjWKvLgeHO0-ilg7zkEXc-hCWP0Q94gdyCeejWNoDMw6h5buM0pFO0mSDKQ=w300" alt="" width="32" height="32">
-        <p class="app-body">
-          Ike GPS
-        </p>
-      </div>
+        <div class="app">
+          <img class="app-figure" src="https://lh5.ggpht.com/ly6G6lUNHjWKvLgeHO0-ilg7zkEXc-hCWP0Q94gdyCeejWNoDMw6h5buM0pFO0mSDKQ=w300" alt="" width="32" height="32">
+          <p class="app-body">
+            Ike GPS
+          </p>
+        </div>
 
-      <div class="app app-selected">
-        <img class="app-figure" src="https://lh5.ggpht.com/ly6G6lUNHjWKvLgeHO0-ilg7zkEXc-hCWP0Q94gdyCeejWNoDMw6h5buM0pFO0mSDKQ=w300" alt="" width="32" height="32">
-        <p class="app-body">
-          Ike GPS
-        </p>
-      </div>
+        <div class="app app-selected">
+          <img class="app-figure" src="https://lh5.ggpht.com/ly6G6lUNHjWKvLgeHO0-ilg7zkEXc-hCWP0Q94gdyCeejWNoDMw6h5buM0pFO0mSDKQ=w300" alt="" width="32" height="32">
+          <p class="app-body">
+            Ike GPS
+          </p>
+        </div>
 
-      <div class="app">
-        <img class="app-figure" src="https://lh5.ggpht.com/ly6G6lUNHjWKvLgeHO0-ilg7zkEXc-hCWP0Q94gdyCeejWNoDMw6h5buM0pFO0mSDKQ=w300" alt="" width="32" height="32">
-        <p class="app-body">
-          Ike GPS
-        </p>
-      </div>
+        <div class="app">
+          <img class="app-figure" src="https://lh5.ggpht.com/ly6G6lUNHjWKvLgeHO0-ilg7zkEXc-hCWP0Q94gdyCeejWNoDMw6h5buM0pFO0mSDKQ=w300" alt="" width="32" height="32">
+          <p class="app-body">
+            Ike GPS
+          </p>
+        </div>
+      <% else %>
+        <a class="add">Pages</a>
+      <% end %>
     </aside>
 
     <section class="main">
-      <%#= render "layouts/partials/alerts" %>
+      <%= render "layouts/partials/alerts" %>
       <%= yield %>
     </section>
   </div>
