--- a/app/views/layouts/partials/_navigation.html.erb
+++ b/app/views/layouts/partials/_navigation.html.erb
@@ -2,12 +2,11 @@
   <span class="brand logo"><%= link_to 'aldrin', root_path %></span>
 
   <span class="account">
-    Signed in as <%= link_to current_user.full_name, edit_user_registration_path %>
-    |
-    <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+
+    <% if current_user %>
+      Signed in as <%= link_to current_user.full_name, edit_user_registration_path %>
+      |
+      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+    <% end %>
   </span>
 </nav>
-
-
-
-
