Turn backbone back on.

--- a/app/views/testpilot/show.html.erb
+++ b/app/views/testpilot/show.html.erb
@@ -3,9 +3,9 @@
 <%#= content_tag :div, '', id: 'testpilot' %>
 
 <script type="text/javascript" charset="utf-8">
-  // $(function () {
-  //   Testpilot.start();
-  // });
+  $(function () {
+    Testpilot.start();
+  });
 </script>
 
 <hgroup>
