--- a/app/assets/javascripts/backbone/templates/sidebar/apps_list.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/sidebar/apps_list.jst.ejs
@@ -1,3 +1,2 @@
 <h4 class="nav-header">Your Apps</h4>
-<ul id='apps-list' class='nav nav-list'>
-</ul>
+<ul id='apps-list' class='nav nav-list'></ul>
