More flex box IE 10 fixes.

--- a/app/assets/stylesheets/sections/_nav.css.scss
+++ b/app/assets/stylesheets/sections/_nav.css.scss
@@ -2,7 +2,9 @@ nav.main {
   background: $primary;
   border-bottom: 1px solid $border-colour;
 
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-align: center;
   align-items: center;
   justify-content: space-between;
   height: 54px;
@@ -10,6 +12,7 @@ nav.main {
   .brand {
     width: 240px;
     text-align: center;
+    display: block;
   }
 
   .account {
