Added apps/show and description JS

--- a/app/assets/javascripts/backbone/templates/sidebar/app_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/sidebar/app_item.jst.ejs
@@ -1,4 +1,4 @@
-<a href="#/<%= id %>" class="media">
+<a href="#/apps/<%= id %>" class="media">
   <div class="pull-left">
     <img class="media-object" src="<%= icon.thumb %>" alt="<%= name %>'s Icon" />
   </div>
