Added new styles into JS app for sidebar and app/show

--- a/app/assets/javascripts/backbone/templates/sidebar/app_item.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/sidebar/app_item.jst.ejs
@@ -1,9 +1,8 @@
-<a href="#/apps/<%= id %>" class="media">
-  <div class="pull-left">
-    <img class="media-object" src="<%= icon.thumb %>" alt="<%= name %>'s Icon" />
-  </div>
-  <div class="media-body">
-    <h4 class="media-heading"><%= name %>
+<a href="#/apps/<%= id %>">
+  <div class="app">
+    <img class="app-figure" src="<%= icon.thumb %>" alt="<%= name %> Icon" width="32" height="32">
+    <p class="app-body">
+      <%= name %>
+    </p>
   </div>
 </a>
-
