--- a/app/views/testpilot/show.html.erb
+++ b/app/views/testpilot/show.html.erb
@@ -1,7 +1,7 @@
 <div id="modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="Modal" aria-hidden="true"></div>
 
-<div id="sidebar-region"></div>
-<div id="main-region"></div>
+<aside class="main"></aside>
+<section class="main"></section>
 
 <script type="text/javascript" charset="utf-8">
   $(function () {
@@ -9,24 +9,24 @@
   });
 </script>
 
-<hgroup>
-  <h1>Ike GPS</h1>
-  <p><strong>13 testers, 64 builds</strong></p>
-</hgroup>
+<%#<hgroup>%>
+  <%#<h1>Ike GPS</h1>%>
+  <%#<p><strong>13 testers, 64 builds</strong></p>%>
+<%#</hgroup>%>
 
-<ul class="nav nav-tabs tab-nav">
-  <li class="active"><a href="#current-build" data-toggle="tab">Build #64</a></li>
-  <li><a href="#permissions" data-toggle="tab">Permissions</a></li>
-</ul>
+<%#<ul class="nav nav-tabs tab-nav">%>
+  <%#<li class="active"><a href="#current-build" data-toggle="tab">Build #64</a></li>%>
+  <%#<li><a href="#permissions" data-toggle="tab">Permissions</a></li>%>
+<%#</ul>%>
 
-<!-- Tab panes -->
-<div class="tab-content">
-  <div class="tab-pane active" id="current-build">
-    Upload date etc
-    Release notes
-  </div>
+<%#[> Tab panes <]%>
+<%#<div class="tab-content">%>
+  <%#<div class="tab-pane active" id="current-build">%>
+    <%#Upload date etc%>
+    <%#Release notes%>
+  <%#</div>%>
 
-  <div class="tab-pane" id="permissions">
-    Permissions
-  </div>
-</div>
+  <%#<div class="tab-pane" id="permissions">%>
+    <%#Permissions%>
+  <%#</div>%>
+<%#</div>%>
