--- a/app/assets/javascripts/backbone/templates/apps/show/description.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show/description.jst.ejs
@@ -1,8 +1,8 @@
-<div class="media">
-  <a class="pull-left mrl" href="#">
-    <img width="128" height="128" src="<%= icon.default %>" alt="<%= name %> Icon" />
-  </a>
-  <div class="media-body">
-      <h1 class="media-heading"><%= name %></h1>
-  </div>
-</div>
+<a class="pull-left mrl" href="#">
+  <img width="128" height="128" src="<%= icon.default %>" alt="<%= name %> Icon" />
+</a>
+
+<hgroup>
+  <h1><%= name %></h1>
+  <p><strong>13 testers, 64 builds</strong></p>
+</hgroup>
