--- a/app/assets/javascripts/backbone/templates/sidebar/layout.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/sidebar/layout.jst.ejs
@@ -1,3 +1,8 @@
-<div class="col-sm-4 col-md-3 sidebar">
-  <div id="apps-region"></div>
-</div>
+<aside class="main">
+
+  <div class="apps-list">
+  </div>
+
+</aside>
+
+
