--- a/app/assets/javascripts/backbone/templates/apps/show/layout.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show/layout.jst.ejs
@@ -1,5 +1,2 @@
-<div class="row">
-  <div class="col-lg-6">
-    <div id="app-description-region"></div>
-  </div>
-</div>
+<div id="app-description-region"></div>
+<div id="app-builds-region"></div>
