--- a/app/assets/javascripts/backbone/templates/apps/show/layout.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show/layout.jst.ejs
@@ -1,2 +1,12 @@
 <div id="app-description-region"></div>
-<div id="app-builds-region"></div>
+
+<ul class="nav nav-tabs tab-nav">
+  <li class="active"><a href="#app-builds-region" data-toggle="tab">Builds</a></li>
+  <li><a href="#app-permissions-region" data-toggle="tab">Permissions</a></li>
+</ul>
+
+<div class="tab-content">
+  <div class="tab-pane active" id="app-builds-region"></div>
+  <div class="tab-pane active" id="app-permissions-region"></div>
+</div>
+
